--- a/template/head.login.include.template
+++ b/template/head.login.include.template
@@ -16,6 +16,7 @@
 
 <!-- log in only -->
 <script src="[__ROOT_PATH__]/js/facebook/titan.facebook.sdk.js"></script>
+<script src="https://apis.google.com/js/api.js"></script>
 <script src="[__ROOT_PATH__]/js/google/titan.google.sdk.js"></script>
 <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
 <script src="[__ROOT_PATH__]/js/kakao/titan.kakao.sdk.js"></script>
